# Restore_Soil_Life_Lab

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  SUPABASE_SETUP 2.md  SUPABASE_SETUP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.base.json  turbo.json
docs/: architecture.md  (+2 more)
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260331_0001_thin_slice_schema.py  20260401_0002_real_auth_sessions.py  20260401_0003_soil_sample_versions.py  20260406_0004_cms_tables.py  20260407_0005_chat_tables.py  20260409_0006_chat_provider_defaults_deepseek.py  20260409_0007_about_page_founder_redesign.py  20260414_0009_password_reset_tokens.py
services/api/app/: __init__.py  main.py
services/api/app/core/: __init__.py  config.py  errors.py  logging.py
services/api/app/db/: __init__.py  chat_models.py  models.py  session.py
services/api/app/domain/: auth.py  enums.py  permissions.py  run_lifecycle.py
services/api/app/jobs/: contracts.py  publisher.py
services/api/app/models/: cms.py
services/api/app/repositories/: __init__.py  admin_repository.py  auth_repository.py  chat_repository.py  cms_repository.py  project_repository.py  run_repository.py  scenario_repository.py  soil_sample_repository.py
services/api/app/schemas/: __init__.py  admin.py  auth.py  chat.py  cms.py  common.py  error.py  project.py  run.py  scenario.py  soil_sample.py  system.py
services/api/app/security/: passwords.py
services/api/app/services/: __init__.py  admin_service.py  auth_service.py  input_snapshot_builder.py  project_service.py  run_service.py  scenario_service.py  serializers.py  soil_sample_service.py
services/api/app/utils/: hashing.py  slugs.py
services/api/bio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/sql/: supabase_bootstrap.sql  supabase_repair_auth.sql  supabase_repair_password_reset_and_activity.sql
services/api/tests/api/: test_auth.py  test_projects.py  test_runs.py  test_scenarios.py  test_soil_samples.py
services/api/tests/unit/: test_input_snapshot_builder.py  test_provider_service.py  test_settings.py
services/simulation-engine/: README.md  pyproject.toml
services/simulation-engine/soil_engine/: __init__.py  cli.py  engine.py  version.py
services/simulation-engine/soil_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/simulation-engine/soil_engine/common/: __init__.py  enums.py  errors.py  hashing.py  models.py
services/worker/: .env.example  pyproject.toml
services/worker/app/: __init__.py  main.py
services/worker/bio_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+198 files in other folders)
