[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-worker"
version = "0.1.0"
description = "Async worker service for Bio Soil simulations and report generation."
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.6.0",
  "redis[hiredis]>=5.2.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP037"]
